HTML Completed Next: JavaScript

--- a/index.html
+++ b/index.html
@@ -12,6 +12,38 @@
 </head>
 <body>
 
+    <header class="wrapper">
+        <h1>can we go <span>to the park</span> <span>today?</span></h1>
+    </header>
+
+    <main>
+        <section class="wrapper">
+            
+            <form action="#" method="#" class="search" name="search">
+                <label for="searchInput">Please enter your city:</label>
+                <input type="text" placeholder="Toronto" id="searchBar">
+                <button type="submit">GO!</button>
+            </form>
+
+        </section>
+
+        <section class="wrapper">
+
+            <div class="weatherPhoto">
+                <!-- Weather photo goes here -->
+            </div>
+
+            <div class="weatherDescription">
+                <!-- weather description goes here -->
+            </div>
+
+        </section>
+    </main>
+
+    <footer>
+        <p>Copyright © <a href="www.junocollege.com">Juno College</a> 2021</p>
+    </footer>
+
     <script src="scripts.js"></script>
 </body>
 </html>
