Added Div re: error handling, next JavaScript

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                 <!-- weather description goes here -->
             </div>
 
+            <div class="modal">
+                <div class="popUp">
+                    <p>Please check the spelling of the City</p>
+                    <button>Close</button>
+                </div>
+            </div>
+
         </section>
     </main>
 
