Style of Error Popup; Next: Media queries

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <form action="#" method="#" class="search" name="search">
                 <label for="searchInput" class ="searchInput">Please enter your city:</label>
                 <div class = "inputAndButton">
-                    <input type="text" placeholder="Toronto" id="searchBar">
+                    <input class="input" type="text" placeholder="Example: Toronto" id="searchBar">
                     <button type="submit">GO!</button>
                 </div>
             </form>
