--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 </body>
 </html>
 
-<!-- cloudy image 
-Photo by Josh Sorenson from Pexels
+<!-- Image Credit
+Snow image credit: Photo by Aaron Burden on Unsplash 
+Cloud image credit: Photo by Josh Sorenson from Pexels
+Sun image credit: Photo by Rajiv Bajaj on Unsplash 
+Rain image credit: Photo by reza shayestehpour on Unsplash 
  -->
