change size of assets to speed page load; add loading image for API call

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="contentContainer">
 
                 <div class="parkImage">
-                    <img src="Assets/pexels-jason-kim-5785548.jpg" alt="Photo of a slide with swings in the background">
+                    <img src="Assets/pexels-jason-kim-5785548-min.jpg" alt="Photo of a slide with swings in the background">
                 </div>
                 
                 <div class="weatherDescription">
@@ -58,6 +58,13 @@
                 </div>
             </div>
             <!-- End of Pop Up to Handle Other Errors -->
+
+            <div class="loading">
+                <!-- div to hold loading image -->
+                <div class="loadingImage">
+                    <!-- image -->
+                </div>
+            </div>
         </section>
     </main>
 
